# edstem

./: .gitignore  LICENSE  Makefile  README.md  client_ideas.py  pyproject.toml
.github/workflows/: python-app.yml
edstem/: __init__.py  _base.py  auth.py  challenge.py  course.py  ed_api.py  lesson.py  module.py  quiz_question.py  slide.py  user.py
edstem/test/: client_ideas.py
examples/: main.py  test.py
teachingtoolshed/: __init__.py
tests/: client_ideas.py  test_course.py  test_lesson.py  test_module.py  test_user.py  testing_utils.py
